# scikit-latent

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
about/: index.html
docs/: about.md  index.md  reference.md
docs/javascripts/: mathjax.js
javascripts/: mathjax.js
reference/: index.html
reference/SUMMARY/: index.html
reference/sklatent/: index.html
reference/sklatent/test_funcs/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/sklatent/: __init__.py  test_funcs.py
tests/: test_sample.py
